[package]
name = "git_rnd_name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17.1"
clap = { version = "4.3.1", features = ["derive"] }
anyhow = "1.0.71"
iterator-ext = "0.2.1"
thiserror = "1.0.40"
