[package]
name = "git_rnd_name"
version = "0.1.4"
edition = "2021"
description = "Generate a random git branch name based on remote name you given."
authors = ["BenginX", "X_Tu"]
license = "MIT"
repository = "https://github.com/W-Mai/git_rnd_name"
homepage = "https://github.com/W-Mai/git_rnd_name"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grn"
path = "src/main.rs"

[dependencies]
git2 = "0.17.1"
clap = { version = "4.3.1", features = ["derive"] }
anyhow = "1.0.71"
iterator-ext = "0.2.1"
thiserror = "1.0.40"
rand = "0.8.5"
log = "0.4.18"
env_logger = "0.10.0"
